
* Under MySQL, PickleCol no longer uses TEXT column types; the smallest
  column is now BLOB - it is not possible to create TINYBLOB column.

SQLObject 0.9.8
===============

* Convert decimal.to_eng_string() to str to work around a bug in Python 2.5.2;
  see http://mail.python.org/pipermail/python-dev/2008-March/078189.html

* Added test_default_style.py.

SQLObject 0.9.7
===============

Released 30 May 2008.

Small Features
--------------

* Use VARCHAR(MAX) and VARBINARY(MAX) for MSSQL >= 9.0.

* Run post_funcs after RowDestroySignal.

Bug Fixes
---------

* Fixed a minor bug in Set column.

* A bug fixed for RowCreatedSignal together with InheritableSQLObject:
  run post_funcs after the entire hierarchy has been created.

* Aggregate functions now honors 'distinct'.

SQLObject 0.9.6
===============

Released 4 May 2008.

* A bug in inheritable delColumn() that doesn't remove properties was fixed.

* A minor bug was fixed in col.py - the registry must be passed to findClass().

* Reverted the patch declarative.threadSafeMethod() - it causes more harm
  then good.

SQLObject 0.9.5
===============

Released 10 Mar 2008.

* Fixed a minor bug in SQLiteConnection.columnsFromSchema() - set dbName.

* A bug in delColumn() that removes all properties was fixed by recreating
  properties.

SQLObject 0.9.4
===============

Released 3 Mar 2008.

* Use list.reverse() in manager/command.py for Python 2.2 compatibility.

* Prevent MultipleJoin from removing the intermediate table if it was not
  created by the Join.

* Fixed a bug with no default when defaultSQL is defined for the column.

* Recognize POINT data type as string in PostgresConnection.columnsFromSchema().

SQLObject 0.9.3
===============

Released 10 Jan 2008.

* A number of changes ported from `SQLObject 0.7.10`_.

SQLObject 0.9.2
===============

Released 30 Oct 2007.

* Fixed a bug in Versioning - do not copy "alternateID" and "unique"
  attributes from the versioned table.
